--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height: 50px;
+  background-color: #123;
+  position: sticky;
+  top: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.header .link {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 900;
+  width: 50%;
+  text-align: center;
+  padding: 15px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.productTitle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.productTitle p {
+  margin: 0 20px;
+  font-size: 1.2em;
+  color: #333;
+}
+
+/* ProductCard.css */
+.product-card {
+  display: flex;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+}
+
+.product-image {
+  width: 150px;
+  object-fit: cover;
+}
+
+.product-details {
+  padding: 15px;
+}
+
+.product-title {
+  font-size: 1.2em;
+  margin-bottom: 8px;
+  color: #333;
+}
+
+.product-description {
+  margin-bottom: 12px;
+  color: #666;
+}
+
+.product-price {
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #e44d26;
+}
+
+.add-to-cart-btn {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.add-to-cart-btn:hover {
+  background-color: #45a049;
 }
